--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/ahrarmonsur/yorku-hacks-2018#readme",
   "dependencies": {
+    "@google-cloud/vision": "^0.22.1",
     "ejs": "^2.6.1",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "express-fileupload": "^1.0.0-alpha.1",
+    "multer": "^1.3.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
